Añade caché de entidades y corrige la carga de relaciones